--- a/src/app/pages/diaTrabalho/dia-trabalho-cadastro/dia-trabalho-cadastro.component.html
+++ b/src/app/pages/diaTrabalho/dia-trabalho-cadastro/dia-trabalho-cadastro.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-header>
-        <h4>Cadastro de Categoria</h4>
+        <h4>Cadastro de Usuário</h4>
     </mat-card-header>
     <mat-card-content>
         <form [formGroup]="form" fxLayout="column">
@@ -8,8 +8,14 @@
                 <input matInput readonly placeholder="Código" formControlName="id">
             </mat-form-field>
             <mat-form-field>
-                <input matInput placeholder="Nome" formControlName="nome">
+                <input readonly matInput placeholder="Dia" formControlName="dia">
             </mat-form-field> 
+            <mat-form-field>
+                <input type="time" matInput placeholder="Hora Início" formControlName="horaInicio">
+            </mat-form-field> 
+            <mat-form-field>
+                <input type="time" matInput placeholder="Hom Fim" formControlName="horaFim">
+            </mat-form-field>
         </form>
     </mat-card-content>
     <mat-card-actions>
