--- a/src/app/pages/diaTrabalho/dia-trabalho-pesquisa/dia-trabalho-pesquisa.component.html
+++ b/src/app/pages/diaTrabalho/dia-trabalho-pesquisa/dia-trabalho-pesquisa.component.html
@@ -1,13 +1,12 @@
 <mat-card>
     <mat-card-header>
-        <h4>Pesquisa de Categorias</h4>
+        <h4>Pesquisa de Dia Trabalho</h4>
     </mat-card-header>
     <mat-card-content>
         <form [formGroup]="form" fxLayout="row">
             <mat-form-field fxFlex>
                 <input matInput placeholder="Pesquisar" formControlName="pesquisar">
             </mat-form-field>
-            <button mat-button (click)="pesquisar()">Pesquisar</button>
             <button mat-button (click)="novo()">Novo</button>
         </form>
         <table mat-table [dataSource]="dataSource">
@@ -15,9 +14,17 @@
                 <th mat-header-cell *matHeaderCellDef> Código </th>
                 <td mat-cell *matCellDef="let element"> {{element.id}} </td>
             </ng-container>
-            <ng-container matColumnDef="nome">
-                <th mat-header-cell *matHeaderCellDef> Nome </th>
-                <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+            <ng-container matColumnDef="dia">
+                <th mat-header-cell *matHeaderCellDef> Dia </th>
+                <td mat-cell *matCellDef="let element"> {{element.dia}} </td>
+            </ng-container>
+            <ng-container matColumnDef="horaInicio">
+                <th mat-header-cell *matHeaderCellDef> Hora Início </th>
+                <td mat-cell *matCellDef="let element"> {{element.horaInicio}} </td>
+            </ng-container>
+            <ng-container matColumnDef="horaFim">
+                <th mat-header-cell *matHeaderCellDef> Hora Fim </th>
+                <td mat-cell *matCellDef="let element"> {{element.horaFim}} </td>
             </ng-container>
             <ng-container matColumnDef="acoes">
                 <th mat-header-cell *matHeaderCellDef> Ações </th>
