--- a/src/app/pages/recurso/recurso-cadastro/recurso-cadastro.component.html
+++ b/src/app/pages/recurso/recurso-cadastro/recurso-cadastro.component.html
@@ -5,7 +5,7 @@
         </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <form [formGroup]="form" >
+        <form [formGroup]="form" fxLayout="column" >
             <mat-form-field>
                 <input matInput readonly placeholder="Código" formControlName="id">
             </mat-form-field>
@@ -26,3 +26,4 @@
         <button mat-button (click)="salvar()">Salvar</button>
     </mat-card-actions>
 </mat-card>
+<router-outlet></router-outlet>
