--- a/src/app/pages/usuario/usuario-cadastro/usuario-cadastro.component.html
+++ b/src/app/pages/usuario/usuario-cadastro/usuario-cadastro.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-header>
-        <h4>Cadastro de Categoria</h4>
+        <h4>Cadastro de Usuário</h4>
     </mat-card-header>
     <mat-card-content>
         <form [formGroup]="form" fxLayout="column">
@@ -9,6 +9,15 @@
             </mat-form-field>
             <mat-form-field>
                 <input matInput placeholder="Nome" formControlName="nome">
+            </mat-form-field> 
+            <mat-form-field>
+                <input matInput placeholder="E-mail" formControlName="email">
+            </mat-form-field> 
+            <mat-form-field>
+                <input matInput placeholder="Celular" formControlName="celular">
+            </mat-form-field> 
+            <mat-form-field>
+                <input matInput placeholder="Senha" formControlName="senha">
             </mat-form-field> 
         </form>
     </mat-card-content>
