--- a/src/app/pages/usuario/usuario-pesquisa/usuario-pesquisa.component.html
+++ b/src/app/pages/usuario/usuario-pesquisa/usuario-pesquisa.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-header>
-        <h4>Pesquisa de Categorias</h4>
+        <h4>Pesquisa de Usuários</h4>
     </mat-card-header>
     <mat-card-content>
         <form [formGroup]="form" fxLayout="row">
@@ -18,6 +18,18 @@
             <ng-container matColumnDef="nome">
                 <th mat-header-cell *matHeaderCellDef> Nome </th>
                 <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+            </ng-container>
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef> E-mail </th>
+                <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+            </ng-container>
+            <ng-container matColumnDef="celular">
+                <th mat-header-cell *matHeaderCellDef> Celular </th>
+                <td mat-cell *matCellDef="let element"> {{element.celular}} </td>
+            </ng-container>
+            <ng-container matColumnDef="senha">
+                <th mat-header-cell *matHeaderCellDef> Senha </th>
+                <td mat-cell *matCellDef="let element"> {{element.senha}} </td>
             </ng-container>
             <ng-container matColumnDef="acoes">
                 <th mat-header-cell *matHeaderCellDef> Ações </th>
